<resources>
    <string name="app_name">Analisador</string>
    <string name="tvname">Name</string>
    <string name="tvSituation">Situation</string>
    <string name="rbEmployee">Employee</string>
    <string name="rbUnemployed">Unemployed</string>
    <string name="rbDoNotSeekOccupation">Do not seek occupation</string>
    <string name="btnTip">Tip</string>
    <string name="btnClean">Clean</string>
    <string name="str_congrats">"Congratulations "</string>
    <string name="str_dont_worry">Do not worry</string>
    <string name="str_good_life">What a good life</string>
    <string name="mark_point" translatable="false">!</string>
    <string name="str_about_name">Name: Josiel Faleiros Alves</string>
    <string name="about_ra" translatable="false">RA: 1694049</string>
    <string name="about_course">Course: Software Engineering</string>
</resources>
